@@ -1,1 +1,13 @@
 # introduction-to-design-patterns
+
+## runtime options
+```
+javac -encoding UTF-8 --enable-preview --release 13 -Xlint:preview
+java --enable-preview
+```
+
+## resources
+[Task2-1](https://github.com/smicle/introduction-to-design-patterns/blob/master/task2-1)  
+[Task3-1](https://github.com/smicle/introduction-to-design-patterns/tree/master/task3-1)  
+[Task4-1](https://github.com/smicle/introduction-to-design-patterns/tree/master/task4-1)  
+[Task5-1](https://github.com/smicle/introduction-to-design-patterns/tree/master/task5-1)  
